--- a/driver-simulator/Dockerfile
+++ b/driver-simulator/Dockerfile
@@ -1,10 +1,15 @@
-FROM golang:1.21
-
+FROM golang:1.23-alpine AS builder
 WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
 COPY . .
+RUN go build -o driver-simulator main.go
 
-RUN go mod init simulador && \
-    go get github.com/nats-io/nats.go && \
-    go build -o simulador
-
-CMD ["./simulador"]
+FROM alpine:latest
+RUN apk --no-cache add ca-certificates
+RUN adduser -D -s /bin/sh appuser
+USER appuser
+WORKDIR /app
+COPY --from=builder /app/driver-simulator .
+COPY --from=builder /app/fake-locations.json .
+CMD ["./driver-simulator"]
